--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Heizungs-Logbuch",
   "short_name": "Heizlog",
-  "start_url": "./index.html?v=3.2.1",
+  "start_url": "./index.html?v=3.2.2",
   "display": "standalone",
   "background_color": "#0b1220",
   "theme_color": "#0b1220",
@@ -16,5 +16,6 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "scope": "./"
 }
